# registry-changes-detector

./: .gitignore  .npmignore  Cargo.toml  README.md  addon.cpp  binding.gyp  index.js  package-lock.json  package.json  registry.cpp  registry.h  wstring.h
dev/: index.js
src/: lib.rs
