[package]
name = "registry-changes-detector"
version = "1.0.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api" ]

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winreg"
]}

